--- a/imports/ui/components/adornis-nebenkosten-aufstellung.html
+++ b/imports/ui/components/adornis-nebenkosten-aufstellung.html
@@ -89,7 +89,7 @@ class AdornisNebenkostenAufstellung extends AdornisPolymerRedux(Polymer.Element)
             kaltwasserVerbrauchInklAllgemein: { type: Number, statePath: 'kaltwasserVerbrauchInklAllgemein' },
             gesamtHeizKosten: { type: Number, statePath: 'gesamtHeizKosten' },
             gesamtWarmwasserKosten: { type: Number, statePath: 'gesamtWarmwasserKosten' },
-            gesamtKaltwasserKosten: { type: Number, statePath: 'gesamtKaltwasserKosten' },
+            gesamtKaltwasserKosten: { type: Number, statePath: 'gesamtKaltwasserKosten', observer: '_test' },
 
             grundHeizKosten: { type: Number, computed: '_mul(gesamtHeizKosten, grundkostenRatioHeizung)' },
             verbrauchsHeizKosten: { type: Number, computed: '_mul(gesamtHeizKosten, verbrauchskostenRatioHeizung)' },
@@ -195,8 +195,8 @@ class AdornisNebenkostenAufstellung extends AdornisPolymerRedux(Polymer.Element)
                         name: 'Rack (Rainer), Rack',
                         qm: 71.4,
                         heizeinheiten: 13159,
-                        warmwasserm3: 35.5,
-                        kaltwasserm3: 66.8,
+                        warmwasserm3: 31.2,
+                        kaltwasserm3: 54.5,
                         zeitanteil: 1,
                     }, {
                         _id: '10',
@@ -252,6 +252,10 @@ class AdornisNebenkostenAufstellung extends AdornisPolymerRedux(Polymer.Element)
 
     _hideOne(number) {
         return +number === 1;
+    }
+
+    _test(num) {
+        console.log('Num: ', num);
     }
 }
 
