--- a/imports/ui/components/test-layout.html
+++ b/imports/ui/components/test-layout.html
@@ -56,42 +56,30 @@
     <!--================= </Router> ================-->
 
     <app-header- class="fit layout vertical">
-        <app-header fixed condenses>
-            <app-toolbar>
-                fancy redux log
-            </app-toolbar>
-        </app-header>
-
-        <table style="display: block; max-height: 120px; overflow-y: scroll; font-family: monospace">
-            <template is="dom-repeat" items="[[messages]]" index-as="index">
-                <tr><td>[[index]]</td><td>[[item]]</td></tr>
-            </template>
-        </table>
-
-        <paper-input value="{{testdata}}"></paper-input>
 
         <paper-toggle-button on-checked-changed="_toggleFilter"></paper-toggle-button>
         <button on-click="handleUpdateMessage">Insert Hallo Welt</button>
         <mongo-data id="mongoData" filter="{{filter}}"></mongo-data>
 
-        <!-- <adornis-finance></adornis-finance> -->
-        <div>
+        <adornis-finance></adornis-finance>
+
+        <!-- <div>
             <div id="inputs">
                 <io-value type="number" value="{{wasserKosten}}"></io-value>
             </div>
             <div class="page-break"></div>
             <template is="dom-repeat" items="[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]" index-as="index">
-                <div class="layout vertical end" style="height: 60px">
+                <div class="layout vertical end" style="height: 60px"> -->
                     <!-- TODO use svg logo -->
-                    <img src="/logo_neu.png" width="120" height="120" />
+                    <!-- <img src="/logo_neu.png" width="120" height="120" />
                 </div>
                 <adornis-nebenkosten-aufstellung mieter-id=""></adornis-nebenkosten-aufstellung>
-                <adornis-nebenkosten></adornis-nebenkosten>
+                <adornis-nebenkosten></adornis-nebenkosten> -->
                 <!-- <adornis-nebenkosten-zaehlerdetails mieter-id="0" style="page-break-after: always"></adornis-nebenkosten-zaehlerdetails> -->
-                <adornis-nebenkosten-aufstellung mieter-id="{{item}}"></adornis-nebenkosten-aufstellung>
+                <!-- <adornis-nebenkosten-aufstellung mieter-id="{{item}}"></adornis-nebenkosten-aufstellung>
                 <div class="print-break"></div>
             </template>
-        </div>
+        </div> -->
 
     </app-header-layout>
 
@@ -113,13 +101,6 @@ class TestLayout extends AdornisPolymerRedux(MwcMixin(Polymer.Element)) {
             messages: {
                 type: Array,
                 statePath: 'debugMessage',
-            },
-
-            // generic polymer property which is synched globally via redux
-            testdata: {
-                type: String,
-                statePath: 'testdata',
-                dispatch: true,
             },
 
             wasserKosten: {
