--- a/imports/ui/components/test-layout.html
+++ b/imports/ui/components/test-layout.html
@@ -16,9 +16,9 @@
 
 <link rel="import" href="mongo-data.html">
 <link rel="import" href="adornis-finance.html">
-<link rel="import" href="adornis-nebenkosten.html">
+<!-- <link rel="import" href="adornis-nebenkosten.html">
 <link rel="import" href="adornis-nebenkosten-aufstellung.html">
-<link rel="import" href="adornis-nebenkosten-zaehlerdetails.html">
+<link rel="import" href="adornis-nebenkosten-zaehlerdetails.html"> -->
 <link rel="import" href="adornis-styles.html">
 
 <dom-module id="test-layout">
