mongo-repeat improvements and other things

--- a/imports/ui/components/mongo-data.html
+++ b/imports/ui/components/mongo-data.html
@@ -19,7 +19,7 @@ class MongoData extends AdornisPolymerRedux(Polymer.Element) {
             todos: {
                 type: Array,
                 collection: 'mongo-data',
-                statePath: 'mongodata_unfiltered',
+                statePath: 'mongo-data',
                 paramProperty: 'filter',
             },
             filter: {
