--- a/imports/ui/components/adornis-finance.html
+++ b/imports/ui/components/adornis-finance.html
@@ -8,14 +8,25 @@
             <table>
                 <tr><td>Input</td><td><paper-input value="{{input}}" label="Rechnung"></paper-input></td></tr>
                 <tr final><td>Nach USt</td><td>{{_(withoutUSt, 2, "Eur")}}</td></tr>
-                <template is="dom-repeat" items="{{spendingsDetail}}">
+                <!-- <template is="dom-repeat" items="{{spendingsDetail}}">
                     <tr>
                         <td><paper-input value="{{item.value}}"></paper-input></td>
                         <td><paper-button on-tap="_changeType">{{item.type}}</paper-button></td>
                         <td><paper-input value="{{item.usage}}"></paper-input></td>
                         <td><paper-button on-tap="_removeItem">-</paper-button></td>
                     </tr>
-                </template>
+                </template> -->
+
+                <mongo-repeat collection="spendings" debounce-interval="100" items="{{spendingsDetail}}">
+                    <template>
+                        <tr>
+                            <td><paper-input value="{{item.value}}"></paper-input></td>
+                            <td><paper-button on-tap="_changeType">{{item.type}}</paper-button></td>
+                            <td><paper-input value="{{item.usage}}"></paper-input></td>
+                            <td><paper-button slot="remove">-</paper-button></td>
+                        </tr>
+                    </template>
+                </mongo-repeat>
                 <tr><td>insg Ausgaben</td><td>{{_(spendings, 2, "Eur")}}</paper-input><paper-button on-tap="_addSpending">+</paper-button></td></tr>
                 <tr final><td>Nach Ausgaben</td><td>{{_(withoutSpendings, 2, "Eur")}}</td></tr>
                 <tr final><td>Nach KoeSt und GewSt</td><td>{{_(withoutTaxes, 2, "Eur")}}</td></tr>
@@ -42,8 +53,7 @@ class AdornisFinance extends AdornisPolymerRedux(Polymer.Element) {
             // finance fields
             input: { type: Number, value: 100 },
             withoutUSt: { type: Number, computed: '_div(input,1.19)' },
-            spendingsDetail: { type: Array, statePath: 'mongo_spendings', collection: 'spendings' },
-            filter: { type: Object, value: {} },
+            spendingsDetail: Array,
             spendings: { type: Number, computed: '_sumSpendings(withoutUSt, spendingsDetail.*)' },
             withoutSpendings: { type: Number, computed: '_sub(withoutUSt, spendings)' },
             withoutTaxes: { type: Number, computed: '_mul(withoutSpendings, afterTaxes)' },
@@ -53,10 +63,6 @@ class AdornisFinance extends AdornisPolymerRedux(Polymer.Element) {
 
     _changeType(e) { // eslint-disable-line class-methods-use-this
         e.model.set('item.type', (e.model.item.type === EUR ? PERC : EUR));
-    }
-
-    _removeItem(e) {
-        this.splice('spendingsDetail', e.model.index, 1);
     }
 
     _addSpending() {
