first try, waiting for upstream

--- a/imports/ui/components/test-layout.html
+++ b/imports/ui/components/test-layout.html
@@ -76,6 +76,8 @@
 
         <hr />
 
+        <adornis-finance></adornis-finance>
+
         <!-- <div>
             <div id="inputs">
             </div>
@@ -143,5 +145,4 @@ class TestLayout extends AdornisPolymerRedux(MwcMixin(Polymer.Element)) {
 }
 
 window.customElements.define(TestLayout.is, TestLayout);
-
 </script>
