ssr first steps

--- a/imports/ui/components/test-layout.html
+++ b/imports/ui/components/test-layout.html
@@ -78,6 +78,10 @@
 
         <adornis-finance></adornis-finance>
 
+        <hr />
+
+        <polymer-3-test></polymer-3-test>
+
         <!-- <div>
             <div id="inputs">
             </div>
@@ -100,6 +104,7 @@
   </template>
 </dom-module>
 
+<script type="module" src="./polymer-3-test.js"></script>
 <script>
 import { MwcMixin } from 'meteor/mwc:mixin';
 
