introduce filters. don't reset on resubscribe with only different parameters

--- a/imports/ui/components/mongo-data.html
+++ b/imports/ui/components/mongo-data.html
@@ -20,9 +20,9 @@ class MongoData extends AdornisPolymerRedux(Polymer.Element) {
                 type: Array,
                 collection: 'mongo-data',
                 statePath: 'mongo-data',
-                paramProperty: 'filter',
+                paramProperty: 'params',
             },
-            filter: {
+            params: {
                 type: Array,
                 value: [],
             },
